--- a/templates/run/detailRun.html.twig
+++ b/templates/run/detailRun.html.twig
@@ -4,7 +4,7 @@
 
     <h1>{{ run.departure }} -> {{ run.arrival }}</h1>
 
-    Pasengers:
+    Passagers:
     <ul>
     {% for passenger in run.passengers %}
        <li> {{ passenger.firstname }}</li>
