--- a/templates/tableau/my_run.html.twig
+++ b/templates/tableau/my_run.html.twig
@@ -43,9 +43,48 @@
                 }
             }
         </script>
+    {% endfor %}
 
-    {% else %}
-        <p>Pas de trajets pour le moment</p>
+    {% for run in app.user.reservedRuns %}
+        <div class="trip-div">
+            <form id="delete-place"  class="delete-my-run">
+                <button onclick="removeMyPlace()">x</button>
+            </form>
+
+
+            <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
+                <div class="img-rider">
+                    {% if run.driver.picture != null %}
+                        <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ run.driver.picture) }}' )"></div>
+                    {% else %}
+                        <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
+                    {% endif %}
+                </div>
+                <div class="name-step">
+                    <p class="name">{{ run.driver.firstname | upper }} {{ run.driver.lastname }}</p>
+                    <p class="phone">Contact : <span>0{{ run.driver.tel }}</span></p>
+                    <p class="city">{{ run.departure }}<span>--></span> {{ run.arrival }}</p>
+                </div>
+                <div class="date-ride">
+                    <p class="day">{{ run.departureDate.format('d') }}</p>
+                    <p class="month">{{ run.departureDate.format('F') }}</p>
+                    <p class="hour">{{ run.departureTime.format('H') }}<span>H</span>{{ run.departureTime.format('i') }}</p>
+                </div>
+            </a>
+        </div>
+
+        <script>
+            function removeMyPlace() {
+                if (confirm("Êtes vous sur de vouloir supprimer le trajet ?")) {
+                    // $('#delete-run').attr('action', $id);
+                    document.getElementById("delete-place").action = "{{ path('removePlace', {'id' : run.id}) }}";
+                    document.getElementById("delete-place").submit();
+                }
+                else {
+
+                }
+            }
+        </script>
     {% endfor %}
 
 
