--- a/templates/tableau/search_run.html.twig
+++ b/templates/tableau/search_run.html.twig
@@ -9,10 +9,13 @@
     {% for run in runs %}
 
         <div class="trip-div">
+            <form class="reserve-run" action="{{ path('reserveRun', {'id' : run.id}) }}">
+                <button>+</button>
+            </form>
 
             <a class="trip" href="{{ path('detailRun', {'id':run.id}) }}">
                 <div class="img-rider">
-                    {% if app.user.picture != null %}
+                    {% if run.driver.picture != null %}
                         <div class="img-profil-rider" style="background-image:url( '{{ asset('img_upload/' ~ run.driver.picture) }}' )"></div>
                     {% else %}
                         <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
