--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -35,5 +35,25 @@
             {{ form_row(registerForm.submit, {'label': 'Modifier mon profil'}) }}
         {% endif %}
         {{ form_end(registerForm) }}
+
+        <script>
+            /* Permet d'afficher l'image après l'avoir chargée */
+            var img = document.getElementById('choose-img');
+            var input = document.getElementById('register_picture');
+            input.setAttribute('onchange', 'previewFile()');
+
+            function previewFile() {
+                var file = document.getElementById('register_picture').files[0];
+                var reader = new FileReader();
+
+                reader.addEventListener("load", function (e) {
+                   img.setAttribute('style', 'background-image:url(' + e.target.result + ')'); 
+                }, false);
+
+                if (file) {
+                    reader.readAsDataURL(file);
+                }
+            }
+        </script>
     </main>
 {% endblock %}
